menambahkan hyper link to email

--- a/halaman1.html
+++ b/halaman1.html
@@ -13,7 +13,9 @@
     <p>
         <i>Sudah merupakan fakta bahwa seorang </i>pembaca akan terpengaruh oleh isi tulisan dari sebuah halaman saat ia melihat tata letaknya. Maksud penggunaan Lorem Ipsum adalah karena ia kurang lebih memiliki penyebaran huruf yang normal, ketimbang menggunakan kalimat seperti "Bagian isi disini, bagian isi disini", sehingga ia seolah menjadi naskah Inggris yang bisa dibaca. Banyak paket Desktop Publishing dan editor situs web yang kini menggunakan Lorem Ipsum sebagai contoh teks. Karenanya pencarian terhadap kalimat "Lorem Ipsum" akan berujung pada banyak situs web yang masih dalam tahap pengembangan. Berbagai versi juga telah berubah dari tahun ke tahun, kadang karena tidak sengaja, <br>kadang karena disengaja (misalnya karena dimasukkan unsur humor atau semacamnya)
     </p>
-    <a href="http://google.com" target="_blank">Click here</a>
+    <a href="http://google.com" target="_blank">Click here</a><br>
+    <!---hyperlink to an email address--->
+    <a href="mailto:sahrul.rajab@gmail.com" target="_blank">Click here</a>
     <h2>My Favorit Bands</h2>
     <ol>
         <li>Salyer</li>
