menambahkan link ke lokal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </p>
     <a href="http://google.com" target="_blank">Click here</a><br>
     <!---hyperlink to an email address--->
-    <a href="mailto:sahrul.rajab@gmail.com" target="_blank">Click here</a>
+    <a href="mailto:sahrul.rajab@gmail.com" target="_blank">Click here</a><br>
+    <!---hyperlink to folder local--->
+    <a href="img3.png" target="_blank">Click here</a>
     <h2>My Favorit Bands</h2>
     <ol>
         <li>Salyer</li>
