playing and controling video

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
     <!---hyperlink to file mp4--->
     <audio controls>
         <source SRC="pantera.mp4">
-    </audio>
+    </audio><br>
 
-    
+    <!---playing and controling video--->
+    <video controls>
+        <source SRC="kitten.mp4">
+    </video><br>
+
+
     <h2>My Favorit Bands</h2>
     <ol>
         <li>Salyer</li>
